--- a/src/style.css
+++ b/src/style.css
@@ -24,6 +24,7 @@ body {
   line-height: 1.1rem;
   background-color: var(--color-dark);
   color: var(--color-light);
+  min-height: 100vh;
 }
 
 .container {
@@ -52,6 +53,63 @@ button:hover {
   background-color: var(--color-highlight);
   border-radius: 0.3rem;
   min-width: 2rem;
+  padding: 0.4rem 1rem;
+}
+
+/* Navigation Bar */
+
+nav {
+  padding: 0 0.5rem;
+  width: 100%;
+  max-width: 1200px;
+  background-color: var(--color-mid);
+  display: flex;
+  gap: 1rem;
+}
+
+.nav__about,
+.nav__reset {
+  margin-left: auto;
+}
+
+/* Projects Pane */
+
+.projects__list {
+  margin: 1rem 0;
+}
+
+.projects__project {
+  display: flex;
+  margin: 0 0 0.4rem 0;
+}
+
+.projects__new-project-button {
+  margin: 0 0 2rem 0.3rem;
+}
+
+.projects__project__open {
+  font-weight: 800;
+  font-size: 1.2rem;
+  text-align: left;
+  width: 100%;
+}
+
+/* Tasks Pane */
+
+.tasks__project {
+  display: flex;
+  margin-bottom: 0.8rem;
+}
+
+.tasks__project__complete {
+  width: 2rem;
+}
+
+.tasks__project__edit {
+  font-weight: 800;
+  font-size: 1.2rem;
+  text-align: left;
+  width: 100%;
 }
 
 .tasks__task {
@@ -78,6 +136,14 @@ button:hover {
 
 .tasks__task__delete {
   margin-left: auto;
+}
+
+.tasks__new-task-button {
+  margin: 1rem 0 0 1.9rem;
+}
+
+.priority {
+  background-color: var(--color-mid);
 }
 
 /* Dialog Styling */
@@ -148,4 +214,34 @@ fieldset {
   justify-content: center;
   gap: 0.5rem;
   margin-bottom: 0.5rem;
+}
+
+/* Dialog Edit Task - Subtasks */
+
+.edit-task-dialog__subtasks {
+  margin: 1rem 0;
+}
+
+.edit-task-dialog__subtask {
+  display: flex;
+  margin-bottom: 0.2rem;
+}
+
+.edit-task-dialog__subtask__complete {
+  width: 2rem;
+}
+
+.edit-task-dialog__subtask__edit {
+  font-weight: 300;
+  font-size: 0.9rem;
+  text-align: left;
+  width: 100%;
+}
+
+.edit-task-dialog__subtask__delete {
+  margin-left: auto;
+}
+
+.edit-task-dialog__subtasks__new-task-button {
+  margin: 1rem 0 0 2.1rem;
 }
