--- a/src/style.css
+++ b/src/style.css
@@ -21,7 +21,7 @@ body {
   padding: 0;
   font-family: var(--font);
   font-size: 1.125rem;
-  line-height: 1.1rem;
+  line-height: 1.125em;
   background-color: var(--color-dark);
   color: var(--color-light);
   min-height: 100vh;
@@ -40,31 +40,34 @@ button {
   color: var(--color-light);
   border: none;
   margin: 0;
-  /* padding: 0; */
 }
 
 button:hover {
   opacity: 0.75;
-  border: var(--color-light) 1px;
   background-color: var(--color-highlight);
+}
+
+button.no-hover:hover {
+  opacity: 1;
+  background-color: inherit;
 }
 
 .btn {
   background-color: var(--color-highlight);
-  border-radius: 0.3rem;
-  min-width: 2rem;
-  padding: 0.4rem 1rem;
+  border-radius: 0.25em;
+  min-width: 2em;
+  padding: 0.5em 1em;
 }
 
 /* Navigation Bar */
 
 nav {
-  padding: 0 0.5rem;
+  padding: 0 0.5em;
   width: 100%;
   max-width: 1200px;
   background-color: var(--color-mid);
   display: flex;
-  gap: 1rem;
+  gap: 1em;
 }
 
 .nav__about,
@@ -75,21 +78,21 @@ nav {
 /* Projects Pane */
 
 .projects__list {
-  margin: 1rem 0;
+  margin: 1em 0;
 }
 
 .projects__project {
   display: flex;
-  margin: 0 0 0.4rem 0;
+  margin: 0 0 0.5em 0;
 }
 
 .projects__new-project-button {
-  margin: 0 0 2rem 0.3rem;
+  margin: 0 0 2em 0.375em;
 }
 
 .projects__project__open {
   font-weight: 800;
-  font-size: 1.2rem;
+  font-size: 1.25rem;
   text-align: left;
   width: 100%;
 }
@@ -98,32 +101,35 @@ nav {
 
 .tasks__project {
   display: flex;
-  margin-bottom: 0.8rem;
+  padding-bottom: 0.75em;
+  margin-bottom: 0.75em;
+  border-bottom: 1px solid var(--color-light);
 }
 
 .tasks__project__complete {
-  width: 2rem;
+  width: 2em;
 }
 
 .tasks__project__edit {
   font-weight: 800;
-  font-size: 1.2rem;
+  font-size: 1.25rem;
   text-align: left;
   width: 100%;
 }
 
 .tasks__task {
   display: flex;
-  margin-bottom: 0.4rem;
+  margin-bottom: 0.4em;
+  min-height: 2em;
 }
 
 .tasks__task__complete {
-  width: 2rem;
+  width: 2em;
 }
 
 .tasks__task__edit {
   font-weight: 300;
-  font-size: 0.8rem;
+  font-size: 0.875rem;
   text-align: left;
   width: 100%;
 }
@@ -139,7 +145,7 @@ nav {
 }
 
 .tasks__new-task-button {
-  margin: 1rem 0 0 1.9rem;
+  margin: 1em 0 0 2em;
 }
 
 .priority {
@@ -148,8 +154,10 @@ nav {
 
 /* Dialog Styling */
 
-::backdrop {
-  opacity: 1;
+dialog::backdrop {
+  opacity: 0.8;
+  background-color: var(--color-dark);
+  backdrop-filter: blur(10px);
 }
 
 dialog {
@@ -158,8 +166,7 @@ dialog {
   border: none;
   background-color: var(--color-dark);
   color: var(--color-light);
-  border-radius: 0.4em;
-
+  border-radius: 0.5em;
 }
 
 fieldset {
@@ -168,7 +175,7 @@ fieldset {
 }
 
 .form {
-  padding: 1rem;
+  padding: 1em;
   margin: 0 auto;
 }
 
@@ -179,7 +186,7 @@ fieldset {
 .edit-task-dialog__item label,
 .edit-subtask-dialog__item label,
 .edit-task-dialog__tag {
-  margin-bottom: 0.5rem;
+  margin-bottom: 0.5em;
 }
 
 .project-dialog__item input,
@@ -190,12 +197,14 @@ fieldset {
 .edit-task-dialog__item select,
 .edit-subtask-dialog__item input {
   font-family: var(--font);
+  background-color: var(--color-mid);
+  color: var(--color-light);
   width: 100%;
   border: 1px solid var(--color-mid);
-  border-radius: 0.4em;
+  border-radius: 0.25em;
   height: initial;
   padding: 0.5em;
-  margin: 0.3em 0 1em 0;
+  margin: 0.375em 0 1em 0;
 }
 
 .project-dialog__buttons,
@@ -212,28 +221,28 @@ fieldset {
 .edit-task-dialog__tag {
   display: flex;
   justify-content: center;
-  gap: 0.5rem;
-  margin-bottom: 0.5rem;
+  gap: 0.5em;
+  margin-bottom: 0.5em;
 }
 
 /* Dialog Edit Task - Subtasks */
 
 .edit-task-dialog__subtasks {
-  margin: 1rem 0;
+  margin: 1em 0;
 }
 
 .edit-task-dialog__subtask {
   display: flex;
-  margin-bottom: 0.2rem;
+  margin-bottom: 0.25em;
 }
 
 .edit-task-dialog__subtask__complete {
-  width: 2rem;
+  width: 2em;
 }
 
 .edit-task-dialog__subtask__edit {
   font-weight: 300;
-  font-size: 0.9rem;
+  font-size: 0.875rem;
   text-align: left;
   width: 100%;
 }
@@ -243,5 +252,30 @@ fieldset {
 }
 
 .edit-task-dialog__subtasks__new-task-button {
-  margin: 1rem 0 0 2.1rem;
+  margin: 1em 0 0 2em;
+}
+
+/* Media Queries */
+
+@media (min-width: 900px) {
+  .row {
+    display: flex;
+    gap: 5em;
+  }
+
+  .col {
+    width: 100%;
+  }
+
+  .col--wide {
+    flex: 3 1 0;
+  }
+
+  .col--narrow {
+    flex: 1 1 0;
+  }
+
+  .tasks__project {
+    margin-top: 1em;
+  }
 }
